experimentData/JavaFuzzer/Jadx-detailedExperimentData/errorSamples/recompilation_failures/275/log-1-275.log

Test.java:118: error: bad operand types for binary operator '^'
                                    i5 = (int) (i5 + (109.65f ^ i2));
                                                              ^
  first type:  float
  second type: int
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

